--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -25,6 +25,7 @@
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
     <script type="text/javascript" th:src="@{/js/admin/member/Member.js}"></script>
+    <script th:src="@{/js/login/validationSeller.js}"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </th:block>
 <div class="content" layout:fragment="content">
