--- a/src/main/resources/templates/myPage/home.html
+++ b/src/main/resources/templates/myPage/home.html
@@ -130,7 +130,7 @@
                                 <th>날짜</th>
                                 <th>구분</th>
                                 <th>주문번호</th>
-                                <th>적립금액</th>
+                                <th>포인트</th>
                                 <th>비고</th>
                                 <th>유효기간</th>
                             </tr>
