--- a/src/main/resources/static/css/my/home.css
+++ b/src/main/resources/static/css/my/home.css
@@ -4,6 +4,9 @@
     margin: 0 auto;
 }
 
+section {
+    margin-left: 20px;
+}
 /* 나의 쇼핑정보 */
 .info {
     display: flex;
@@ -27,7 +30,6 @@
 }
 
 .info ul li:hover {
-    background-color: #ffe5e5;
     color: #d9201f;
     cursor: pointer;
 }
@@ -59,7 +61,7 @@ section {
 }
 
 
-    /* 상단 링크 스타일 */
+/* 상단 링크 스타일 */
 .myinfotopside .shopping-info {
     font-size: 22px;
     font-weight: 700;
@@ -68,8 +70,8 @@ section {
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     line-height: 2.5; /* 줄 간격을 조정하여 아래로 내림 */
 }
- h3 {
-    padding-left: 30px;
+h3 {
+    padding-left: 0;
     margin-bottom: 0;
 }
 
@@ -121,7 +123,7 @@ section {
     transition: color 0.3s ease;
 }
 .myinfotopside ol li a span:nth-child(2) {
-    margin-left: 10px;
+    margin-left: 3px;
 }
 
 .myinfotopside ol li a span:nth-child(4) {
@@ -158,8 +160,9 @@ section {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .widthtable th {
     background-color: #d50e0e;
