--- a/src/main/resources/static/css/my/ordered.css
+++ b/src/main/resources/static/css/my/ordered.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
 }
 section {
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 /* 기본 정보 스타일 개선 */
@@ -29,7 +29,6 @@ section {
     transition: all 0.2s ease;
 }
 .info ul li:hover {
-    background-color: #ffe5e5;
     color: #d9201f;
     cursor: pointer;
 }
@@ -65,9 +64,7 @@ section {
 }
 
 
-.latest h3 {
-    padding-left: 30px;
-}
+
 /* 네비게이션 리스트 스타일 */
 .myinfotopside ol {
     display: flex;
@@ -126,7 +123,7 @@ section {
     transition: color 0.3s ease;
 }
 .myinfotopside ol li a span:nth-child(2) {
-    margin-left: 10px;
+    margin-left: 3px;
 }
 
 .myinfotopside ol li a span:nth-child(4) {
@@ -142,13 +139,12 @@ section {
 .banner {
     display: block;
     margin: 20px auto;
-    width: 950px;
+    width: 970px;
     height: 100px;
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* 배너에 그림자 추가 */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin-left: 20px;
 
 }
 .banner:hover {
@@ -211,16 +207,19 @@ section {
 
 /* 테이블 스타일 */
 .widthtable {
-    margin-top: 10px;
     width: 100%;
     border-collapse: collapse;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .widthtable th {
     background-color: #d50e0e;
     color: #fff;
     padding: 10px;
     font-size: 13px;
+
 }
 .widthtable td {
     padding: 10px;
@@ -322,17 +321,7 @@ section {
 }
 
 
-/* 스크롤바 스타일 */
-::-webkit-scrollbar {
-    width: 6px;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #ef2a23;
-    border-radius: 5px;
-}
-::-webkit-scrollbar-track {
-    background: #f0f0f0;
-}
+
 
 /* 이미지 스타일 */
 .recentproductorderimg img {
