--- a/src/main/resources/static/css/my/qna.css
+++ b/src/main/resources/static/css/my/qna.css
@@ -3,7 +3,7 @@
     margin: 0 auto; /* 가운데 정렬 */
 }
 section {
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 /* 나의 쇼핑정보 */
@@ -28,7 +28,6 @@ section {
     transition: all 0.2s ease;
 }
 .info ul li:hover {
-    background-color: #ffe5e5;
     color: #d9201f;
     cursor: pointer;
 }
@@ -65,9 +64,7 @@ section {
 }
 
 
-.latest h3 {
-    padding-left: 30px;
-}
+
 /* 네비게이션 리스트 스타일 */
 .myinfotopside ol {
     display: flex;
@@ -108,6 +105,13 @@ section {
     color: #d9201f; /* 다크 레드 컬러 */
     margin-top: 5px;
 }
+.myinfotopside div {
+    display: flex;
+    align-items: center;
+    /* 세로 가운데 정렬 */
+    justify-content: space-between;
+    height: 55px;
+}
 
 
 /* 최근주문내역, 전체주문내역 상품정보 이미지 */
@@ -126,7 +130,7 @@ section {
     transition: color 0.3s ease;
 }
 .myinfotopside ol li a span:nth-child(2) {
-    margin-left: 10px;
+    margin-left: 3px;
 }
 
 .myinfotopside ol li a span:nth-child(4) {
@@ -142,13 +146,12 @@ section {
 .banner {
     display: block;
     margin: 20px auto;
-    width: 950px;
+    width: 970px;
     height: 100px;
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* 배너에 그림자 추가 */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin-left: 20px;
 }
 
 .banner:hover {
@@ -157,15 +160,7 @@ section {
 }
 
 
-/*상품정보*/
-/* 숫자 출력 스타일 */
-.myinfotopside ol li span {
-    display: block;
-    font-size: 18px;
-    /* 숫자의 크기 */
-    font-weight: bold;
-    /* 숫자 굵게 */
-}
+
 
 /* 테이블 스타일 */
 .widthtable {
