--- a/src/main/resources/static/css/admin/cs/faq/list.css
+++ b/src/main/resources/static/css/admin/cs/faq/list.css
@@ -11,6 +11,7 @@ select[name="type1"] {
     border: 1px solid #D8D8D8;
     text-align: center;
     outline: none;
+    border-radius: 4px;
 }
 select[name="type2"] {
     width: 80px;
@@ -18,6 +19,7 @@ select[name="type2"] {
     border: 1px solid #D8D8D8;
     text-align: center;
     outline: none;
+    border-radius: 4px;
 }
 /* 유형선택 */
 .sectionBox > div {
@@ -75,7 +77,7 @@ input[type="checkbox"] {
 /* 삭제버튼 */
 .delete_btn {
     float: left;
-    width: 100px;
+    width: 80px;
     height: 37px;
     padding: 6px;
     margin-top: 10px;
@@ -87,11 +89,12 @@ input[type="checkbox"] {
     vertical-align: middle;
     box-sizing: border-box;
     cursor: pointer;
+    border-radius: 4px;
 }
 /* 등록버튼 */
 .registration_btn {
     float: right;
-    width: 100px;
+    width: 80px;
     height: 37px;
     padding: 6px;
     margin-top: 10px;
@@ -103,6 +106,7 @@ input[type="checkbox"] {
     vertical-align: middle;
     box-sizing: border-box;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 
