--- a/src/main/resources/static/css/admin/cs/notice/list.css
+++ b/src/main/resources/static/css/admin/cs/notice/list.css
@@ -9,6 +9,7 @@ select[name="type"] {
     border: 1px solid #D8D8D8;
     text-align: center;
     outline: none;
+    border-radius: 4px;
 }
 /* 유형선택 */
 .sectionBox > div {
@@ -78,7 +79,7 @@ button[type=submit] {
 /* 삭제버튼 */
 .delete_btn {
     float: left;
-    width: 100px;
+    width: 80px;
     height: 37px;
     padding: 6px;
     margin-top: 10px;
@@ -90,11 +91,12 @@ button[type=submit] {
     vertical-align: middle;
     box-sizing: border-box;
     cursor: pointer;
+    border-radius: 4px;
 }
 /* 등록버튼 */
 .registration_btn {
     float: right;
-    width: 100px;
+    width: 80px;
     height: 37px;
     padding: 6px;
     margin-top: 10px;
@@ -106,6 +108,7 @@ button[type=submit] {
     vertical-align: middle;
     box-sizing: border-box;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 
