--- a/src/main/resources/static/css/admin/cs/qna/reply.css
+++ b/src/main/resources/static/css/admin/cs/qna/reply.css
@@ -77,6 +77,7 @@
     font-size: 16px;
     padding: 10px;
     box-sizing: border-box;
+    border-radius: 4px;
 }
 
 /* 페이징 */
@@ -143,8 +144,10 @@
 .qna_article_write .button-container .submit-btn {
     background-color: #4291e9;
     margin-right: 10px;
+    border-radius: 4px;
 }
 
 .qna_article_write .button-container .list-btn {
     background-color: #4291e9;
+    border-radius: 4px;
 }
