--- a/src/main/resources/templates/admin/cs/faq/modify.html
+++ b/src/main/resources/templates/admin/cs/faq/modify.html
@@ -92,8 +92,8 @@
           </tr>
         </table>
         <div style="text-align: center; margin-top: 50px">
-          <a th:href="@{/admin/cs/faq/list}"><input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"/></a>
-          <input type="submit" value="수정하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
+          <a th:href="@{/admin/cs/faq/list}"><input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"/></a>
+          <input type="submit" value="수정하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"/>
         </div>
       </form>
     </article>
