--- a/src/main/resources/templates/admin/cs/faq/view.html
+++ b/src/main/resources/templates/admin/cs/faq/view.html
@@ -40,16 +40,16 @@
           </tr>
         </table>
         <div style="text-align: center; margin-top: 50px">
-          <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"
+          <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"
                  th:onclick="|deleteFaq(${faq.id})|" />
 <!--          <a th:href="@{/admin/cs/faq/delete(id=${faq.id})}">-->
 <!--            <button type="button" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;">삭제</button>-->
 <!--          </a>-->
           <a th:href="@{/admin/cs/faq/modify/{id}(id=${faq.id})}">
-            <button type="button" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;">수정</button>
+            <button type="button" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;">수정</button>
           </a>
           <a th:href="@{/admin/cs/faq/list}">
-            <button type="button" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;">목록</button>
+            <button type="button" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;">목록</button>
           </a>
         </div>
       </form>
