--- a/src/main/resources/templates/admin/cs/notice/modify.html
+++ b/src/main/resources/templates/admin/cs/notice/modify.html
@@ -48,9 +48,9 @@
         </table>
         <div style="text-align: center; margin-top: 50px">
           <a th:href="@{/admin/cs/notice/list}">
-            <button type="button" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;">취소하기</button>
+            <button type="button" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;">취소하기</button>
           </a>
-          <input type="submit" value="수정하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
+          <input type="submit" value="수정하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"/>
         </div>
       </form>
     </article>
