--- a/src/main/resources/templates/admin/cs/notice/view.html
+++ b/src/main/resources/templates/admin/cs/notice/view.html
@@ -37,13 +37,13 @@
         </tr>
       </table>
       <div style="text-align: center; margin-top: 50px">
-        <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"
+        <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"
                th:onclick="|deleteNotice(${notice.id})|" />
         <a th:href="@{/admin/cs/notice/modify/{id}(id=${notice.id})}">
-          <input type="button" value="수정" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
+          <input type="button" value="수정" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;" />
         </a>
         <a th:href="@{/admin/cs/notice/list}">
-          <input type="button" value="목록" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
+          <input type="button" value="목록" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;" />
         </a>
 
         <script src="/js/admin/cs/noticedelete.js"></script>
