--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -106,14 +106,14 @@
             <article>
                 <div>
                     <h3>이용안내</h3>
-                    <p><span>일반회원/비회원</span><br><strong>1566-0001</strong><span class="tel_gray">(평일 09:00 ~ 18:00)</span></p>
-                    <p><span>스마일클럽 전용</span><br><strong>1566-0002</strong><span class="tel_gray">(365일 09:00 ~ 18:00)</span></p>
+                    <p><span class="title">일반회원/비회원</span><br><strong>1566-0001</strong><span class="tel_gray">(평일 09:00 ~ 18:00)</span></p>
+                    <p><span class="title">스마일클럽 전용</span><br><strong>1566-0002</strong><span class="tel_gray">(365일 09:00 ~ 18:00)</span></p>
                 </div>
             </article>
             <article>
                 <div>
                     <h3>판매상담 이용안내</h3>
-                    <p><span>판매고객</span><br><strong>1566-5700</strong><span class="tel_gray">(평일 09:00 ~ 18:00)</span></p>
+                    <p><span class="title">판매고객</span><br><strong>1566-5700</strong><span class="tel_gray">(평일 09:00 ~ 18:00)</span></p>
                     <p><a href="#">판매자 가입 및 서류 접수 안내 〉</a></p>
                 </div>
             </article>
