--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -79,9 +79,9 @@
           </table>
           <div style="text-align: center; margin-top: 50px">
             <a th:href="@{/cs/layout/qna/list}">
-              <input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
+              <input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px; "/>
             </a>
-            <input type="submit" value="등록하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
+            <input type="submit" value="등록하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px;"/>
           </div>
         </form>
       </article>
