--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -47,7 +47,7 @@
     <!-- 관리자 -->
     <!-- 배너등록 모달 -->
     <div id="bannerModal" class="modal admin">
-        <div class="Bannermodal-content modalcontent">
+        <div class="Bannermodal-content modalcontent" style="height: 650px">
             <nav class="adminmodal-nav">
                 <h1>배너등록</h1>
                 <button class="adminmodal-close" id="closeModal">&times;</button>
