--- a/src/main/resources/static/css/banner/banner.css
+++ b/src/main/resources/static/css/banner/banner.css
@@ -8,11 +8,13 @@
 
 .main_bannerBox {
     display: flex;
-    width: 300%; /* 이미지가 3개이므로 300%로 설정 */
+    width: 100%;
+    height: 100%;
     transition: transform 0.5s ease;
 }
 
 .main_banner__img {
     width: 1200px; /* 한 번에 하나의 이미지가 차지하는 영역 */
+    height: 100%;
     flex-shrink: 0;
 }
