--- a/src/main/resources/templates/myPage/home.html
+++ b/src/main/resources/templates/myPage/home.html
@@ -142,10 +142,10 @@
                             <tr th:each="point : ${points}" class="admin_list">
                                 <td th:text="${point.formattedCreatedAt }"></td>
                                     <td th:text="${point.transactionType.toString()}"></td>
-                                    <td th:text="${point.order.id}">2022121001</td>
-                                    <td th:text="${point.acPoints}"></td>
+                                <td th:text="${point.order?.id != null ? point.order.id : point.type}">123</td>
+                                <td th:text="${point.givePoints < 0 ? point.givePoints : '+' + point.givePoints}"></td>
                                 <td th:text="${point.type != null ? point.type : '비고 없음'}"></td>
-                                    <td th:text="${point.formattedExpirationDate}">2025-10-24</td>
+                                <td th:text="${point.transactionType.toString() == '사용' || point.transactionType.toString() == '만료' ? '없음' : point.formattedExpirationDate}">유효기간</td>
                                 </tr>
                         </table>
                     </article>
