--- a/src/main/resources/templates/myPage/point.html
+++ b/src/main/resources/templates/myPage/point.html
@@ -67,7 +67,7 @@
           <td th:text="${point.order?.id != null ? point.order.id : point.type}">123</td>
           <td th:text="${point.givePoints < 0 ? point.givePoints : '+' + point.givePoints}"></td>
           <td th:text="${point.type != null ? point.type : '비고 없음'}"></td>
-          <td th:text="${point.transactionType == '사용' || point.transactionType == '만료' ? '없음' : point.formattedExpirationDate}">유효기간</td>
+          <td th:text="${point.transactionType.toString() == '사용' || point.transactionType.toString() == '만료' ? '없음' : point.formattedExpirationDate}">유효기간</td>
         </tr>
         <tbody id="resultContainer">
 
